--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,5 @@
 header{
-    height: 130vh;
+    height: 150vh;
     padding-top: 7rem;
     overflow: hidden;
 }
@@ -77,14 +77,18 @@ header{
 
 @media screen and (max-width: 1024px) {
     header{
-        height:  68vh;
+        height:  150vh;
 
     }
 }
 
 @media screen and (max-width: 600px) {
     header{
-        height: 100vh;
+        height: 130vh;
+    }
+    .me{
+        width: 20rem;
+        margin-left: 30px;
     }
 
     .header_socials, .scroll_down{
