--- a/src/index.css
+++ b/src/index.css
@@ -11,10 +11,11 @@
 
 
 :root{
-    --color-bg: #1f1f38;
-    --color-bg-variant: #2c2c6c;
-    --color-primary: #4db5ff;
-    --color-primary-variant: rgba(77,181,255,0.4);
+    /* --color-bg: #1f1f38; */
+    --color-bg: #2d2e31;
+    --color-bg-variant: #232331;
+    --color-primary: #64f4ac;
+    --color-primary-variant: rgba(77, 255, 172, 0.4);
     --color-white: #fff;
     --color-light: rgba(245, 163, 163, 0.6);
 
@@ -39,6 +40,8 @@ body{
     background: var(--color-bg);
     color: var(--color-white);
     line-height: 1.7;
+    display: flex;
+    flex-direction: column;
 }
 
 /* =================== GENERAK STYLE ============== */
