--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,10 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 100vh;
     position: absolute;
     top: 0;
     z-index: -1;
+    overflow:  hidden;
 }
 .shape:nth-of-type(1) {
     width: 400px;
