--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
     position: absolute;
     top: 0;
     z-index: -1;
-    overflow:  hidden;
+
 }
 .shape:nth-of-type(1) {
     width: 400px;
@@ -129,5 +129,110 @@
     }
     50%{
         border-radius: 26% 74% 51% 49% / 22% 53% 47% 78%;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .shape:nth-of-type(1) {
+        width: 300px;
+        height: 300px;
+        top: 30vh;
+    }
+    .shape:nth-of-type(2) {
+        width: 700px;
+        height: 700px;
+        background: #7998ff;
+        position: absolute;
+        top: -200px;
+        left: -400px;
+        opacity: .2;
+        z-index: -1;
+        animation: wave 5s ease-in-out infinite;
+    }
+    .shape:nth-of-type(3) {
+        width: 300px;
+        height: 300px;
+        background: #02ffd57a;
+        position: absolute;
+        /* bottom: -25%; */
+        top: 130vh;
+        left: 10vw;
+        opacity: .3;
+        z-index: -1;
+        animation: wave 12s ease-in-out infinite;
+    }
+    .shape:nth-of-type(4) {
+        width: 250px;
+        height: 250px;
+        background: #fbff0d2c;
+        position: absolute;
+        top: 80vh;
+        left: 20%;
+        opacity: .4;
+        z-index: -1;
+        animation: wave 6s ease-in-out infinite;
+    }
+    .shape:nth-of-type(5) {
+        width: 250px;
+        height: 250px;
+        background: #a1b6fd83;
+        position: absolute;
+        top: 200vh;
+        left: 15%;
+        opacity: .2;
+        z-index: -1;
+        animation: wave 15s ease-in-out infinite;
+    }
+    .shape:nth-of-type(6) {
+        /* display: none; */
+        background: red;
+    }
+    .shape:nth-of-type(7) {
+        width: 300px;
+        height: 300px;
+        position: absolute;
+        background: #3da0f183;
+        top: 300vh;
+        left: -5%;
+        opacity: .5;
+        z-index: -1;
+        transform: rotate(190deg);
+        animation: wave 15s ease-in-out infinite;
+    }
+    .shape:nth-of-type(8) {
+        width: 200px;
+        height: 200px;
+        position: absolute;
+        background: #084b35c0;
+        top: 310vh;
+        right: 5%;
+        opacity: .5;
+        z-index: -1;
+        transform: rotate(90deg);
+        animation: wave 15s ease-in-out infinite;
+    }
+    .shape:nth-of-type(9) {
+        width: 500px;
+        height: 600px;
+        position: absolute;
+        background: #3d58f133;
+        top: 400%;
+        right: 50%;
+        opacity: .5;
+        z-index: -1;
+        transform: rotate(90deg);
+        animation: wave 15s ease-in-out infinite;
+    }
+    .shape:nth-of-type(10) {
+        width: 100px;
+        height: 100px;
+        position: absolute;
+        background: #3df1ac83;
+        top: 7%;
+        right: 5%;
+        opacity: .5;
+        z-index: -1;
+        transform: rotate(90deg);
+        animation: wave 15s ease-in-out infinite;
     }
 }
