changing the alt of images

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -48,7 +48,7 @@ header{
 
 /* ================================Me Image============================== */
 
-.me{
+.rahul-ray{
     /* background: linear-gradient(var(--color-primary), transparent); */
     width: 24rem;
     /* height: 30rem; */
