--- a/src/App.css
+++ b/src/App.css
@@ -67,8 +67,9 @@
     width: 400px;
     height: 400px;
     position: absolute;
-    background: #3df1ac83;
-    top: 690vh;
+    /* background: #3df1ac83; */
+    background: #3d58f183;
+    top: 440vh;
     right: 30%;
     opacity: .2;
     z-index: -1;
@@ -183,9 +184,10 @@
         z-index: -1;
         animation: wave 15s ease-in-out infinite;
     }
+
     .shape:nth-of-type(6) {
-        /* display: none; */
-        background: red;
+        top: 720vh;
+        bottom: 30%;
     }
     .shape:nth-of-type(7) {
         width: 300px;
@@ -218,18 +220,6 @@
         background: #3d58f133;
         top: 400%;
         right: 50%;
-        opacity: .5;
-        z-index: -1;
-        transform: rotate(90deg);
-        animation: wave 15s ease-in-out infinite;
-    }
-    .shape:nth-of-type(10) {
-        width: 100px;
-        height: 100px;
-        position: absolute;
-        background: #3df1ac83;
-        top: 7%;
-        right: 5%;
         opacity: .5;
         z-index: -1;
         transform: rotate(90deg);
